--- a/Assets/Editor/LiteComponent.Editor.asmdef
+++ b/Assets/Editor/LiteComponent.Editor.asmdef
@@ -1,6 +1,8 @@
 {
     "name": "LiteComponent.Editor",
-    "references": [],
+    "references": [
+        "GUID:51791c108ab140044acf9994981ecc90"
+    ],
     "includePlatforms": [
         "Editor"
     ],
