Fix package name case

--- a/Assets/package.json
+++ b/Assets/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.danand.LiteComponent",
+  "name": "com.danand.litecomponent",
   "displayName": "Lite Component",
   "description": "Lightweight behaviour component for Unity.",
   "version": "0.1.0",
